test/cli/test-mutating-admission-policy/test-mutating-admission-policy-binding/resource1.yaml
# deployment-in-test-ns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: test-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
