test/cli/test-mutating-admission-policy/test-mutating-admission-policy-binding/resource2.yaml
# deployment-in-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-default
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
