test/cli/test-mutating-admission-policy/test-mutating-admission-policy-binding/expected-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: test-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
