test/cli/test-mutating-admission-policy/test-mutating-admission-policy-binding/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaceSelector:
- labels:
    env: test
  name: test-ns
